# deepbondi

./: README.md  dantest.txt
depracted/: bingo
depracted/hs-loginscripts/src/Actions/: Interactive.hs  Path.hs  Preflight.hs
depracted/hs-loginscripts/src/Shell/: Bash.hs
etc/: bashrc  cygwin.bat  profile
etc/darcs/: darcs-client.darwin  server.config
etc/fonts/: CMR12.otf.dfont
etc/iterm2/: com.googlecode.iterm2.plist
etc/sublime-text/: C++.sublime-settings  C.sublime-settings  HTML.sublime-settings  Haskell.sublime-settings  Package Control.last-run  Package Control.sublime-settings  Preferences.sublime-settings  RustAutoComplete.sublime-settings  RustEnhanced.sublime-settings  SCSS.sublime-settings  TypeScript.sublime-settings  Vue Component.sublime-settings
etc/textmate/: com.macromates.textmate.plist  install.sh
etc/textmate/Bundles/Agda.tmbundle/: info.plist
etc/textmate/Bundles/Haskell.tmbundle/: info.plist
etc/textmate/Bundles/LBNF.tmbundle/: info.plist
etc/textmate/Themes/: Moku Dark.tmTheme  Sunburst.tmTheme
fortune/: past-motds  past-motds.ix
init/: init.cabal
init/X11/keymaps/: dvorak.pke  qwerty.pke
init/bash/: aliases  completions  completions.cabal  completions.darcs  completions.svn  darcs_completion  environment  functions  initdirs  interactive  login  logout  path  preflight  rc  xdg
init/cygwin/: cygwin.bat
init/setup/: cygwin.sh  cygwin.sh.lnk  profile.d.sh
init/src/: Main.hs
init/src/Shell/: Basics.hs
init/src/Util/: GetOpts.hs
pm/: hilite.pm
sbin/: new-etc-motd  new-motd  uptime.atcrash.update
(+48 files in other folders)
