name:                   init
version:                0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>

description:            Shell- and OS-agnostic login script generation framework

Flag split-base

Executable init
  hs-source-dirs:       src
  main-is:              Main.hs
  
  build-depends:        haskell98
  if flag(split-base)
    build-depends:      base >= 3
  else
    build-depends:      base < 3
